"""Chisel integration examples and tests for bazel-orfs."""

module(
    name = "bazel-orfs-chisel",
    version = "0.0.1",
)

# --- bazel-orfs and verilog rules ---

bazel_dep(name = "bazel-orfs")
local_path_override(
    module_name = "bazel-orfs",
    path = "..",
)

bazel_dep(name = "bazel-orfs-verilog")
local_path_override(
    module_name = "bazel-orfs-verilog",
    path = "../verilog",
)

bazel_dep(name = "mock-klayout", version = "0.0.1")
local_path_override(
    module_name = "mock-klayout",
    path = "../mock/klayout",
)

bazel_dep(name = "orfs")
git_override(
    module_name = "orfs",
    commit = "f40d2f346e67ffe309a4f49b1897a560cf20c747",
    patch_strip = 1,
    patches = [
        "//patches:0001-build-remove-stale-merge_lib.py-preprocessLib.py-fro.patch",
        "//patches:0002-build-add-all-PDKs-and-export-variables.yaml.patch",
        "//patches:0035-fix-remove-non-root-overrides-from-MODULE.bazel.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts.git",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default()
use_repo(orfs, "docker_orfs")
use_repo(orfs, "gnumake")
use_repo(orfs, "yosys")

# --- Build rules ---

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "rules_verilator", version = "0.1.0")
bazel_dep(name = "verilator", version = "5.036.bcr.3")
bazel_dep(name = "googletest", version = "1.17.0")

# --- Chisel / Scala toolchain ---

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_scala", version = "7.1.5")
bazel_dep(name = "rules_chisel", version = "0.3.0")

SCALA_VERSION = "2.13.17"

SCALA_VERSION_SHORT = SCALA_VERSION.rpartition(".")[0]

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = SCALA_VERSION)
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
scala_deps.scalatest()
use_repo(scala_deps, "rules_scala_toolchains")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.chipsalliance:chisel_%s:7.2.0" % SCALA_VERSION_SHORT,
        "org.chipsalliance:firtool-resolver_%s:2.0.1" % SCALA_VERSION_SHORT,
        "org.chipsalliance:chisel-plugin_%s:7.2.0" % SCALA_VERSION,
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

chisel = use_extension("@rules_chisel//chisel:extensions.bzl", "chisel")
chisel.toolchain(
    chisel_version = "7.2.0",
    firtool_resolver_version = "2.0.1",
    scala_version = SCALA_VERSION,
)
use_repo(chisel, "chisel_maven")

register_toolchains("@rules_scala_toolchains//...:all")
