"""Chisel integration examples and tests for bazel-orfs."""

module(
    name = "bazel-orfs-chisel",
    version = "0.0.1",
)

# --- bazel-orfs and verilog rules ---

bazel_dep(name = "bazel-orfs")
local_path_override(
    module_name = "bazel-orfs",
    path = "..",
)

bazel_dep(name = "bazel-orfs-verilog")
local_path_override(
    module_name = "bazel-orfs-verilog",
    path = "../verilog",
)

bazel_dep(name = "mock-klayout", version = "0.0.1")
local_path_override(
    module_name = "mock-klayout",
    path = "../mock/klayout",
)

bazel_dep(name = "yosys", version = "0.62")
# Make yosys_share publicly visible for the ORFS flow (see bazel-orfs MODULE.bazel).
single_version_override(
    module_name = "yosys",
    patches = ["//patches:yosys-visibility.patch"],
    patch_strip = 1,
)

bazel_dep(name = "orfs")
git_override(
    module_name = "orfs",
    commit = "74271e42b301df0b3b84fb14d42282f9e8491cee",
    patch_strip = 1,
    patches = [
        "//patches:0002-build-add-all-PDKs-and-export-variables.yaml.patch",
        "//patches:0035-fix-remove-non-root-overrides-from-MODULE.bazel.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts.git",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default()
use_repo(orfs, "docker_orfs")
use_repo(orfs, "gnumake")

# --- OpenROAD built from source ---
# git_override is root-only in bzlmod, so each root module must provide it.

bazel_dep(name = "openroad")
git_override(
    module_name = "openroad",
    commit = "d22045c978d037f7a5788c08f359aec471800c01",
    init_submodules = True,
    patch_strip = 1,
    patches = [
        "//:openroad-visibility.patch",
        "//:openroad-remove-initrunfiles.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD.git",
)

bazel_dep(name = "qt-bazel")
git_override(
    module_name = "qt-bazel",
    commit = "886104974c2fd72439f2c33b5deebf0fe4649df7",
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

bazel_dep(name = "glpk", version = "5.0.bcr.4")

bazel_dep(name = "toolchains_llvm", version = "1.5.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    llvm_version = "20.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
)

# --- Build rules ---

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.7.1")
bazel_dep(name = "rules_verilator", version = "0.3.1")
bazel_dep(name = "rules_verilog", version = "1.1.1")
bazel_dep(name = "verilator", version = "5.044")
bazel_dep(name = "googletest", version = "1.17.0.bcr.1")

# --- Chisel / Scala toolchain ---

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_scala", version = "7.1.5")
bazel_dep(name = "rules_chisel", version = "0.3.0")

SCALA_VERSION = "2.13.17"

SCALA_VERSION_SHORT = SCALA_VERSION.rpartition(".")[0]

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = SCALA_VERSION)
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
scala_deps.scalatest()
use_repo(scala_deps, "rules_scala_toolchains")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.chipsalliance:chisel_%s:7.2.0" % SCALA_VERSION_SHORT,
        "org.chipsalliance:firtool-resolver_%s:2.0.1" % SCALA_VERSION_SHORT,
        "org.chipsalliance:chisel-plugin_%s:7.2.0" % SCALA_VERSION,
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

chisel = use_extension("@rules_chisel//chisel:extensions.bzl", "chisel")
chisel.toolchain(
    chisel_version = "7.2.0",
    firtool_resolver_version = "2.0.1",
    scala_version = SCALA_VERSION,
)
use_repo(chisel, "chisel_maven")

register_toolchains("@rules_scala_toolchains//...:all")
