# ORFS integration test workspace — see README.md

exports_files([
    "openroad-toolchains-llvm-dev-dep.patch",
    "openroad-visibility.patch",
])

test_suite(
    name = "asap7_lint_tests",
    tests = [
        "@orfs//flow/designs/asap7/aes:aes_cipher_top_lint_test",
        "@orfs//flow/designs/asap7/aes-block:aes_cipher_top_lint_test",
        "@orfs//flow/designs/asap7/aes-mbff:aes_cipher_top_lint_test",
        "@orfs//flow/designs/asap7/aes_lvt:aes_cipher_top_lint_test",
        "@orfs//flow/designs/asap7/cva6:cva6_lint_test",
        "@orfs//flow/designs/asap7/ethmac:ethmac_lint_test",
        "@orfs//flow/designs/asap7/ethmac_lvt:ethmac_lint_test",
        "@orfs//flow/designs/asap7/gcd:gcd_lint_test",
        "@orfs//flow/designs/asap7/gcd-ccs:gcd_lint_test",
        "@orfs//flow/designs/asap7/ibex:ibex_core_lint_test",
        "@orfs//flow/designs/asap7/jpeg:jpeg_encoder_lint_test",
        "@orfs//flow/designs/asap7/jpeg_lvt:jpeg_encoder_lint_test",
        "@orfs//flow/designs/asap7/mock-alu:MockAlu_lint_test",
        "@orfs//flow/designs/asap7/mock-cpu:mock_cpu_lint_test",
        "@orfs//flow/designs/asap7/riscv32i:riscv_top_lint_test",
        "@orfs//flow/designs/asap7/riscv32i-mock-sram:riscv_top_lint_test",
        "@orfs//flow/designs/asap7/swerv_wrapper:swerv_wrapper_lint_test",
        "@orfs//flow/designs/asap7/uart:uart_lint_test",
    ],
)
